Added CSS file to be used.

--- a/brewduino-server/src/main/resources/templates/brewduino.html
+++ b/brewduino-server/src/main/resources/templates/brewduino.html
@@ -1,9 +1,12 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>"Welcome to Brewduino1"</title>
+    <title>"Welcome to Brewduino!"</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link href="../static/style.css" rel="stylesheet"
+          th:href="@{style.css}"/>
 </head>
 <body>
-<header></header>
+<header>Derp</header>
 </body>
 </html>
