--- a/brewduino-server/src/main/resources/templates/result.html
+++ b/brewduino-server/src/main/resources/templates/result.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Getting Started: Handling Form Submission</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Result</title>
 </head>
 <body>
 <h1>Result</h1>
