--- a/brewduino-server/src/main/resources/static/style.css
+++ b/brewduino-server/src/main/resources/static/style.css
@@ -1,4 +1,3 @@
-html, * {
-    background-color: #EEEEEE;
-    color: #444444;
-}
+        body{margin:20px auto;max-width:650px;font-size:18px;color:#444;padding:0 5px}h1,h2,h3{line-height:1.2}
+        html{background-color: #D3B2F3;}
+        input[type="submit"]{width:150px; height:50px;}
