Fixed CSS href in brewduino.

--- a/brewduino-server/src/main/resources/templates/brewduino.html
+++ b/brewduino-server/src/main/resources/templates/brewduino.html
@@ -3,8 +3,7 @@
 <head>
     <title>"Welcome to Brewduino!"</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="../static/style.css" rel="stylesheet"
-          th:href="@{style.css}"/>
+    <link rel="stylesheet" th:href="@{style.css}"/>
 </head>
 
 <body>
