The Arduino is connected to the Server now, yay.

--- a/brewduino-server/src/main/resources/templates/result.html
+++ b/brewduino-server/src/main/resources/templates/result.html
@@ -30,9 +30,9 @@
 	<div id="Order">
 		<p th:text="'Sugar: ' + ${request.sugar}" />
     	<p th:text="'Milk: ' + ${request.milk}" />
-    	<p th:text="'id: ' + ${request.vanillaSyrup}" />
-    	<p th:text="'content: ' + ${request.caramelSyrup}" />
-    	<p th:text="'id: ' + ${request.hazelnutSyrup}" />
+    	<p th:text="'Vanilla Syrup: ' + ${request.vanillaSyrup}" />
+    	<p th:text="'Caramel Syrup: ' + ${request.caramelSyrup}" />
+    	<p th:text="'Hazelnut Syrup: ' + ${request.hazelnutSyrup}" />
     </div>
 <a href="/brewduino">Need more coffee?</a>
 </body>
