--- a/brewduino-server/src/main/resources/templates/result.html
+++ b/brewduino-server/src/main/resources/templates/result.html
@@ -7,18 +7,24 @@
 
 <script>
 	function getReceipt() {
+		var milk = ${request.milk};
+		var sugar = ${request.sugar};
+		var vanillaSyrup = ${request.vanillaSyrup};
+		var caramelSyrup = ${request.caramelSyrup};
 		var data = "<p>Black coffee";
-		if (${request.sugar} > 0) {
-			data += " with: <br/>" + ${request.sugar} + " sugars;";
+		if ((milk != "no milk") || (sugar > 0) || vanillaSyrup || caramelSyrup) {
+			data += " with: <br/>";
+		if (milk != "no milk") {
+			data += "-	" + milk + " milk";
+		}
+		if (sugar > 0) {
+			data += "-	" + sugar + " sugars";
 		}
 		if (${request.vanillaSyrup} == "true") {
-			data += " vanilla syrup;";
+			data += "-	vanilla syrup";
 		}
 		if (${request.caramelSyrup} == "true") {
-			data += " caramel syrup;";
-		}
-		if (${request.hazelnutSyrup} == "true") {
-			data += " hazelnut syrup;";
+			data += "-	caramel syrup";
 		}
 		data += "</p>";
 		document.getElementById("Order").innerHTML = data;
@@ -27,12 +33,8 @@
 
 <body>
 	<h1>Your Order:</h1>
-	<div id="Order">
-		<p th:text="'Sugar: ' + ${request.sugar}" />
-    	<p th:text="'Milk: ' + ${request.milk}" />
-    	<p th:text="'Vanilla Syrup: ' + ${request.vanillaSyrup}" />
-    	<p th:text="'Caramel Syrup: ' + ${request.caramelSyrup}" />
-    </div>
+	<div id="Order"></div>
+	
 <a href="/brewduino">Need more coffee?</a>
 </body>
 </html>
