Added function invocation

--- a/brewduino-server/src/main/resources/templates/result.html
+++ b/brewduino-server/src/main/resources/templates/result.html
@@ -33,8 +33,11 @@
 
 <body>
 	<h1>Your Order:</h1>
-	<div id="Order"></div>
-	
-<a href="/brewduino">Need more coffee?</a>
+	<div id="Order">
+		<script>
+			getReceipt();
+		</script>
+	</div>
+	<a href="/brewduino">Need more coffee?</a>
 </body>
 </html>
