Removed 2nd syrup and changed timings of thread sleeps.

--- a/brewduino-server/src/main/resources/templates/brewduino.html
+++ b/brewduino-server/src/main/resources/templates/brewduino.html
@@ -24,8 +24,7 @@
     </select><br/>
 
     <h2>EXTRAS:</h2>
-    <input type="checkbox" name="extra" th:field="*{vanillaSyrup}"/>Vanilla syrup<br/>
-    <input type="checkbox" name="extra" th:field="*{caramelSyrup}"/>Caramel syrup<br/>
+    <input type="checkbox" name="extra" th:field="*{syrup}"/>Syrup<br/>
     <input type="submit" value="BREW"/>
 </form>
 </body>
